--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand"><img th:src="@{/images/logo.png}" height="40px" width="40px"/></a>
+  <a class="navbar-brand"><img th:src="@{/images/calendar.png}" height="40px" width="40px"/></a>
   <!-- Bottone toggle per mobile -->
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
