--- a/src/main/resources/templates/scadenze/list.html
+++ b/src/main/resources/templates/scadenze/list.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Lista Beneficari</title>
+    <title>Lista Scadenze</title>
     <div class="row">
         <div class="col-md-12">
             <th:block th:if="${!#strings.isEmpty(message)}">
@@ -29,16 +29,30 @@
 <body>
 <br>
 <div class="row">
-    <div class="col-md-4">
-        <a class="btn btn-outline-primary btn-sm" th:href="|@{/scadenza/new}|"><i class="fas fa-plus-circle"></i>  Nuova scadenza</a>&nbsp;&nbsp;&nbsp;
-        <!-- Nella tua pagina "lista scadenze" -->
-        <a class="btn btn-outline-primary btn-sm"
-           target="_blank"
-           th:href="@{/scadenze/grafico-categorie}">
-            <i class="fa-solid fa-chart-bar"></i>Grafico spese per categoria
-        </a>
+    <div class="col-md-7">
+        <div class="row">
+            <div class="col-md-12">
+                <a class="btn btn-outline-primary btn-sm" th:href="|@{/scadenza/new}|"><i class="fas fa-plus-circle"></i>  Nuova scadenza</a>
+                <br>
+                <br>
+                <div class="input-group">
+                    <!-- Nella tua pagina "lista scadenze" -->
+                    <form method="get" th:action="@{/scadenze/grafico-categorie}" target="_blank">
+                        <div class="input-group-append">
+                            dal:<input type="date" th:name="dal" class="form-control form-control-sm"/>
+                            al:<input type="date" th:name="al" class="form-control form-control-sm"/>
+                            <hr>
+                            <button type="submit" class="btn btn-outline-primary btn-sm">
+                                <i class="fa-solid fa-chart-bar"></i>
+                                Grafico spese per categoria
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-8 d-flex flex-row-reverse">
+    <div class="col-md-5 d-flex flex-row-reverse">
         <form th:action="@{/scadenze/list(page=${currentPage}, size=1, sortBy='beneficiario', sortDirection=${sortBy == 'beneficiario' and sortDirection == 'asc' ? 'desc' : 'asc'})}" method="GET">
             <div class="input-group">
                 <b style="text-align: center;">Beneficiario/Data Scadenza</b>&nbsp;&nbsp;&nbsp;<input type="text" name="beneficiario" th:value="${titleFilter}" placeholder="Cerca..." aria-label="Cerca..." aria-describedby="search-button">
