--- a/src/main/resources/static/images/style.css
+++ b/src/main/resources/static/images/style.css
@@ -11,6 +11,11 @@ body>.container {
 body>footer {
     background-color: #f5f5f5;
 }
+.chart {
+    border: 1px solid #5C6784;
+    background-color: #CBCCCE;
+    width: 45%;
+}
 
 .text-red {
     color: red;
