--- a/src/main/resources/static/images/style.css
+++ b/src/main/resources/static/images/style.css
@@ -13,7 +13,7 @@ body>footer {
 }
 .chart {
     border: 1px solid #5C6784;
-    background-color: #CBCCCE;
+    background-color: #dfe2e6;
     width: 45%;
 }
 
