--- a/src/main/resources/templates/scadenze/list.html
+++ b/src/main/resources/templates/scadenze/list.html
@@ -39,8 +39,8 @@
                     <!-- Nella tua pagina "lista scadenze" -->
                     <form method="get" th:action="@{/scadenze/grafico-categorie}" target="_blank">
                         <div class="input-group-append">
-                            dal:<input type="date" th:name="dal" class="form-control form-control-sm"/>
-                            al:<input type="date" th:name="al" class="form-control form-control-sm"/>
+                            dal:<input type="date" th:name="dal" class="form-control form-control-md"/>
+                            al:<input type="date" th:name="al" class="form-control form-control-md"/>
                             <hr>
                             <button type="submit" class="btn btn-outline-primary btn-sm">
                                 <i class="fa-solid fa-chart-bar"></i>
