--- a/src/main/resources/templates/scadenze/list.html
+++ b/src/main/resources/templates/scadenze/list.html
@@ -38,15 +38,21 @@
                 <div class="input-group chart">
                     <!-- Nella tua pagina "lista scadenze" -->
                     <form method="get" th:action="@{/scadenze/grafico-categorie}" target="_blank">
-                        <div class="input-group-append">
-                            dal:<input type="date" th:name="dal" class="form-control form-control-md"/>
-                            al:<input type="date" th:name="al" class="form-control form-control-md"/>
-                            <hr>
-                            <button type="submit" class="btn btn-outline-primary btn-sm">
-                                <i class="fa-solid fa-chart-bar"></i>
-                                Grafico spese per beneficiario
-                            </button>
-                        </div>
+                            <div class="input-group-append">
+                                  <div class="input-group-text">
+                                      dal&nbsp;<input type="date" th:name="dal" class="form-control form-control-md"/>
+                                  </div>
+                                  <div class="input-group-text">
+                                      al&nbsp;<input type="date" th:name="al" class="form-control form-control-md"/>
+                                  </div>
+                                <hr>
+                                <div class="input-group-text">
+                                    <button type="submit" class="btn btn-outline-primary btn-sm">
+                                        <i class="fa-solid fa-chart-bar"></i>
+                                        Grafico spese per beneficiario
+                                    </button>
+                                </div>
+                            </div>
                     </form>
                 </div>
             </div>
