--- a/src/main/resources/templates/scadenze/grafico-categorie.html
+++ b/src/main/resources/templates/scadenze/grafico-categorie.html
@@ -19,10 +19,10 @@
 <div class="wrap">
     <h1 th:text="|Spese per beneficiario ${(dal != null or al != null) ?
                 ' (' + #temporals.format(dal,'dd/MM/yyyy') + ' → ' +
-                #temporals.format(al,'dd/MM/yyyy') + ')' : ''}|">
+                #temporals.format(al,'dd/MM/yyyy') + ')' : ''} anno ${annoSelezionato}|">
     </h1>
     <div class="toolbar">
-        <form method="get" th:href="@{/scadenze/grafico-categorie(filter=${param.filter})}">
+        <form method="get" th:href="@{/scadenze/grafico-categorie(filter=${beneficiario}, anno=${annoSelezionato})}">
 
         <div class="input-group">
                 <div class="input-group-text">
@@ -30,6 +30,14 @@
                 </div>
                 <div class="input-group-text">
                     al: <input type="date" name="al" class="form-control form-control-sm" th:value="${al}"/>
+                </div>
+                <div class="input-group-text">
+                    <select name="anno" onchange="this.form.submit()" class="form-select form-select-sm" aria-label="Small select example">
+                        <option th:each="y : ${anni}"
+                                th:value="${y}"
+                                th:selected="${y} == ${annoSelezionato}"
+                                th:text="${y}"></option>
+                    </select>
                 </div>
                 <div class="input-group-text">
                     <button type="submit" class="btn btn-outline-primary form-control form-control-sm">Applica</button>
@@ -43,23 +51,11 @@
     /*<![CDATA[*/
     const labels = /*[[${labels}]]*/ [];
     const values = /*[[${values}]]*/ [];
-
     const ctx = document.getElementById('chart').getContext('2d');
     new Chart(ctx, {
         type: 'bar',
-        data: {
-            labels: labels,
-            datasets: [{
-                label: 'Totale (€)',
-                data: values
-            }]
-        },
-        options: {
-            responsive: true,
-            scales: {
-                y: { beginAtZero: true }
-            }
-        }
+        data: { labels, datasets: [{ label: 'Totale (€)', data: values }] },
+        options: { responsive: true, scales: { y: { beginAtZero: true } } }
     });
     /*]]>*/
 </script>
