--- a/src/main/resources/templates/scadenze/list.html
+++ b/src/main/resources/templates/scadenze/list.html
@@ -29,26 +29,33 @@
 <body>
 <br>
 <div class="row">
-    <div class="col-md-7">
-        <div class="row">
-            <div class="col-md-12">
+    <div class="col-md-8">
                 <div class="input-group">
                     <div class="input-group-append">
                         <a class="btn btn-outline-primary btn-sm" th:href="|@{/scadenza/new}|"><i class="fas fa-plus-circle"></i>  Nuova scadenza</a>&nbsp;&nbsp;&nbsp;
                     </div>
                     <div class="input-group-append">
-                            <a class="btn btn-outline-primary btn-sm"
-                               target="_blank"
-                               th:href="@{/scadenze/grafico-categorie(filter=${titleFilter})}"><i class="fa-solid fa-chart-bar"></i>
-                                Grafico spese per beneficiario
-                            </a>
+                        <a class="btn btn-outline-primary btn-sm"
+                           target="_blank"
+                           th:href="@{/scadenze/grafico-categorie(filter=${beneficiario}, anno=${anno})}">
+                            <i class="fa-solid fa-chart-bar"></i> Spese per beneficiario
+                        </a>
                     </div>
+                    <form method="get" th:action="|@{/scadenze/list(anno=${anno},filter=${beneficiario},page=${currentPage}, size=1, sortBy='beneficiario', sortDirection=${sortBy == 'beneficiario' and sortDirection == 'asc' ? 'desc' : 'asc'})}|">
+                        <div class="input-group-append">
+                        <select name="anno" onchange="this.form.submit()" class="form-select form-select-sm mb-3 ms-3" aria-label="Small select example">
+                                <option th:each="y : ${anni}"
+                                        th:value="${y}"
+                                        th:selected="${y} == ${annoSelezionato}"
+                                        th:text="${y}">
+                                </option>
+                            </select>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-md-5 d-flex flex-row-reverse">
-        <form th:action="@{/scadenze/list(page=${currentPage}, size=1, sortBy='beneficiario', sortDirection=${sortBy == 'beneficiario' and sortDirection == 'asc' ? 'desc' : 'asc'})}" method="GET">
+    <div class="col-md-4 d-flex flex-row-reverse">
+        <form th:action="@{/scadenze/list(anno=${anno},filter=${beneficiario},page=${currentPage}, size=10, sortBy='beneficiario', sortDirection=${sortBy == 'beneficiario' and sortDirection == 'asc' ? 'desc' : 'asc'})}" method="GET">
             <div class="input-group">
                 <b style="text-align: center;">Beneficiario/Data Scadenza</b>&nbsp;&nbsp;&nbsp;<input type="text" name="beneficiario" th:value="${titleFilter}" placeholder="Cerca..." aria-label="Cerca..." aria-describedby="search-button">
                 <button class="input-group-text" id="search-button"><i class="fas fa-search"></i></button>
@@ -61,7 +68,7 @@
     <table class="table table-striped table-hover">
         <thead class="thead-light">
         <tr>
-            <th scope="col"><a th:href="|?page=${currentPage}&size=10&beneficiario=${titleFilter}&sortBy=beneficiario&sortDirection=${sortBy == 'beneficiario' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
+            <th scope="col"><a th:href="|/scadenze/list?anno=${anno}&filter=${beneficiario}&page=${currentPage}&size=10&beneficiario=${titleFilter}&sortBy=beneficiario&sortDirection=${sortBy == 'beneficiario' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
                 Beneficiario
                 <th:block th:if="${sortBy=='beneficiario' && sortDirection=='asc'}">
                     <i class="fas fa-caret-up"></i>
