--- a/src/main/resources/templates/scadenze/list.html
+++ b/src/main/resources/templates/scadenze/list.html
@@ -68,7 +68,7 @@
     <table class="table table-striped table-hover">
         <thead class="thead-light">
         <tr>
-            <th scope="col"><a th:href="|/scadenze/list?anno=${anno}&filter=${beneficiario}&page=${currentPage}&size=10&beneficiario=${titleFilter}&sortBy=beneficiario&sortDirection=${sortBy == 'beneficiario' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
+            <th scope="col"><a th:href="|/scadenze/list?anno=${anno}&filter=${beneficiario}&page=${currentPage}&size=20&beneficiario=${titleFilter}&sortBy=beneficiario&sortDirection=${sortBy == 'beneficiario' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
                 Beneficiario
                 <th:block th:if="${sortBy=='beneficiario' && sortDirection=='asc'}">
                     <i class="fas fa-caret-up"></i>
@@ -77,7 +77,7 @@
                     <i class="fas fa-caret-down"></i>
                 </th:block>
             </a></th>
-            <th scope="col"><a th:href="|?page=${currentPage}&size=10&dataScadenza=${titleFilter}&sortBy=dataScadenza&sortDirection=${sortBy == 'dataScadenza' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
+            <th scope="col"><a th:href="|?anno=${anno}&filter=${beneficiario}&page=${currentPage}&size=20&dataScadenza=${titleFilter}&sortBy=dataScadenza&sortDirection=${sortBy == 'dataScadenza' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
                 Data Scadenza
                 <th:block th:if="${sortBy=='dataScadenza' && sortDirection=='asc'}">
                     <i class="fas fa-caret-up"></i>
@@ -86,7 +86,7 @@
                     <i class="fas fa-caret-down"></i>
                 </th:block>
             </a></th>
-            <th scope="col"><a th:href="|?page=${currentPage}&size=10&importo=${titleFilter}&sortBy=importo&sortDirection=${sortBy == 'importo' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
+            <th scope="col"><a th:href="|?anno=${anno}&filter=${beneficiario}&page=${currentPage}&size=20&importo=${titleFilter}&sortBy=importo&sortDirection=${sortBy == 'importo' && sortDirection == 'asc' ? 'desc' : 'asc'}|">
                 Importo
                 <th:block th:if="${sortBy=='importo' && sortDirection=='asc'}">
                     <i class="fas fa-caret-up"></i>
@@ -158,19 +158,19 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         <li class="page-item" th:classappend="${currentPage == 0 ? 'disabled' : ''}">
-            <a class="page-link" th:href="|?page=${currentPage - 1}&size=10&beneficiario=${titleFilter}&sortBy=${sortBy}&sortDirection=${sortDirection}|" aria-label="Previous">
+            <a class="page-link" th:href="|?page=${currentPage - 1}&size=20&beneficiario=${titleFilter}&sortBy=${sortBy}&sortDirection=${sortDirection}|" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
             </a>
         </li>
         <th:block th:each="i : ${#numbers.sequence(0, totalPages - 1)}">
             <li class="page-item" th:classappend="${i == currentPage} ? 'active' : ''">
-                <a class="page-link" th:href="|?page=${i}&size=10&beneficiario=${titleFilter}&sortBy=${sortBy}&sortDirection=${sortDirection}|">
+                <a class="page-link" th:href="|?anno=${anno}&filter=${beneficiario}&page=${i}&size=20&beneficiario=${titleFilter}&sortBy=${sortBy}&sortDirection=${sortDirection}|">
                     <th:block th:text="${i + 1}"></th:block>
                 </a>
             </li>
         </th:block>
         <li class="page-item" th:classappend="${currentPage == totalPages - 1} ? 'disabled' : ''">
-            <a class="page-link" th:href="|?page=${currentPage + 1}&size=10&beneficiario=${titleFilter}&sortBy=${sortBy}&sortDirection=${sortDirection}|" aria-label="Next">
+            <a class="page-link" th:href="|?anno=${anno}&filter=${beneficiario}&page=${currentPage + 1}&size=20&beneficiario=${titleFilter}&sortBy=${sortBy}&sortDirection=${sortDirection}|" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
             </a>
         </li>
